--- a/Dissertation/appendix.tex
+++ b/Dissertation/appendix.tex
@@ -365,7 +365,7 @@ $ \forall 1 \le i \le n+1: e_i' = ({e^1_i}', \dots, {e^m_i}')$.
 Это как раз то, что нам нужно было доказать. 
 \end{proof}
 
-\section{Доказательство условия~\ref{cpa_transfer_inner_req} для ThreadCPA}
+\section{Доказательство условия~\ref{cpa_transfer_composite_req} для ThreadCPA}
 \label{sect_transfer_thread_proof}
 
 Нам нужно доказать, что определенные в разделе~\ref{sect_thread_analysis} операторы $transfer$ и $apply$ удовлетворяют условию~\ref{cpa_transfer_composite_req}.
@@ -910,7 +910,7 @@ t_m
 
 Если $op \neq thread\_create$, по определению $transfer$ $e'_i = (s_i, \top^T_T)$, то есть состояние не изменяется, а переходы рассматриваются все возможные. 
 Таким образом, 
-$$с' \in  \epp^S_{T}
+$$c' \in  \epp^S_{T}
 \left(
 \begin{pmatrix}
 s_0 \\
@@ -945,7 +945,7 @@ t_m
 \end{pmatrix}
 \right\}
 \right)$$
-А значит, $\tau' = (c', g', t_k)$:
+А значит, для $\tau' = (c', g', t_k)$:
 $$\tau'  \in \epp_{T}
 \left(
 \begin{pmatrix}
@@ -1025,7 +1025,7 @@ t_m
 
 Если $op \neq thread\_create$, по определению $transfer$ $e'_i = (s_i, \top^T_T)$, то есть состояние не изменяется, а переходы рассматриваются все возможные. 
 Таким образом, 
-$$с' \in  \epp^S_{T}
+$$c' \in  \epp^S_{T}
 \left(
 \begin{pmatrix}
 s_0 \\
@@ -1081,10 +1081,17 @@ t_m
 \right)$$
 
 Рассмотрим теперь случай $op = thread\_create(l_{\nu})$.
-При обычном переходе меняются состояния нулевого потока: $C'_0 = C_0 \cup \{l_{\nu}\}$, и появляется новый переход, соответствующий созданному потоку: $e_{m+1} = ((l_{\nu},C_0 \cup \{l_{\nu}\}) , \top^T_T)$.
+При обычном переходе меняются состояния нулевого потока: $s_0' = s_0 \cup \{(l_{\nu}, Parent)\}$, и появляется новый переход, соответствующий созданному потоку: $e_{m+1} = (s \cup \{(l_{\nu}, Child)\} , \top^T_T)$.
 
 По определению $\epp_T$ все остальные переходы в окружении должны были содержать в себе абстрактную дугу, которая соответсвует переходу в потоке, то есть $q_i = (create, l_{\nu})$.
-Таким образом, $\forall 1 \le i \le m, C_i = C'_0$, то есть состояния остаются совместными, а значит, оператор $apply$ будет применим.
+Основной вопрос заключается в том, будут ли новые состояния совместными (в смысле оператора $check_{C}$) друг с другом.
+Заметим, что все исходные были совместными, то есть, для каждой пары существовал общий элемент.
+Так как $\forall 1 \le i \le m s_i' = s_i$, то $\forall 0 \le j \le m: check((s_j, t_j), \{(s_0, t_0), \dots, (s_m, t_m)\}) = true$.
+Теперь нужно проверить, что $\forall 0 \le j \le m: compatible(e_j', e_{m+1}')=true$.
+Для $j=0$ совместность обеспечивается идентификатором потока $l_{\nu}$, которая встречается в двух переходах с противоположными флагами.
+Для $j\neq 0$ совместность обеспечивается идентификатором того же потока, который обеспечивал совместность переходов $e_0$ и $e_j$.
+
+Таким образом, $\forall 0 \le i \le m, check((s_j, t_j), \{(s_0, t_0), \dots, (s_m, t_m)\}) = true$, а значит, оператор $\epp$ и оператор $apply$ применимы.
 Поэтому, 
 $$\tau' \in  \epp_{T}
 \left(
@@ -1111,8 +1118,7 @@ l_{\nu}
 
 \end{proof}
 
-
-\section{Описание коммитов, содержащих исправления ошибок связанных с состоянием гонки}
+\chapter{Описание коммитов, содержащих исправления ошибок связанных с состоянием гонки}
 \label{sect_commits_desc}
 
 \textbf{Коммит:} f1a8a3f
@@ -1242,6 +1248,8 @@ CPALockator выдает предупреждение о том, что функ
 CPALockator находит такое состояние гонки между \textit{\_\_send\_control\_msg}.
 Из коммита не совсем ясно, какой именно обработчик привел к состоянию гонки. 
 CPALockator приводит трассу, начинающуюся с \textit{virtcons\_restore}. 
+После исправления данная трасса не находится, что подтверждает корректность найденной ошибки.
+Однако, полностью доказать отсутствие ошибок не удается из-за наличия ложных предупреждений об ошибках.
 
 Для данной верификационной задачи потребовалось добавление модельной регистрации \textit{register\_virtio\_driver}.
 
@@ -1254,7 +1262,7 @@ CPALockator приводит трассу, начинающуюся с \textit{v
 В коммите исправляется ошибка, связанная с некорректным доступом к очереди, которая определена на стеке.
 При некорректной синхронизации один поток (\textit{usbnet\_terminate\_urbs}) может завершиться раньше, чем произойдет доступ к очереди из другого потока (\textit{usbnet\_bh}).
 Данный модуль экспортирует объявленные обработчики, включая \textit{usbnet\_probe}, для вызова из других модулей. 
-Таким образом, требуетс более сложная схема подготовки верификационной задачи, которая позволит получать такие задачи на основе нескольких модулей.
+Таким образом, требуется более сложная схема подготовки верификационной задачи, которая позволит получать такие задачи на основе нескольких модулей.
 
 \textbf{Статус:} не найдена.
 
@@ -1278,7 +1286,7 @@ CPALockator приводит трассу, начинающуюся с \textit{v
 В коммите добавляется проверка значения некоторой переменной, которая могла быть изменена другим потоком. 
 При этом состояние гонки не исправляется, а лишь обнаруживается, то есть, если значение было изменено, значит, произошла гонка, и возвращается код ошибки.
 Анализ этого модуля приводит к исчерпанию лимита по времени, так как модуль \textit{fs/btrfs/btrfs.ko} достаточно объемный и содержит около 300 000 строк кода, а также большое количество функциональных указателей, которые всегда вызывают трудности у инструментов статического анализа.
-\todo{При этом даже построение первой, самой неточной абстракции не успевает завершиться.}
+При этом даже построение первой, самой неточной абстракции не успевает завершиться.
 
 \textbf{Статус:} не найдена.
 
@@ -1289,8 +1297,8 @@ CPALockator приводит трассу, начинающуюся с \textit{v
 Патч исправляет ошибку, связанную с тем, что выполнение scsi комманды (функция \textit{complete\_scsi\_command}) завершается (\textit{scsi\_done}) до освобождения ресурсов (\textit{cmd\_free}).
 Таким образом, может оказаться, что выполнение другой команды начнется до того, как будут освобождены ресурсы. 
 По сути операция \textit{scsi\_done} используется, как неявная синхронизация.
-% Почему не находится доступ без блокировок?
-В данный момент CPALockator не поддерживает такие примитивы синхронизации.
+При этом операции выделения памяти в \textit{cmd\_alloc} и ее освобождения в \textit{cmd\_free}, которые образуют гонку, сами по себе выполняются под блокировками, которые захватываются внутри соответствующих функций.
+То есть, данная ошибка является высокоуровневой гонкой.
 Кроме этого, из-за большого количества уточнений анализ данного модуля не может завершиться за отведенный лимит времени.
 
 \textbf{Статус:} не найдена.
@@ -1333,6 +1341,7 @@ CPALockator выдает предупрждение для этого указа
 В каждой из этих функций уже находится соответствующий мьютекс, и исправление заключается в расширении области его действия.
 Так как CPALockator выдает одно предупреждение на каждую переменную, он находит только одно из двух мест, в данном случае он выдает предупреждение о доступах в функциях \textit{hfsplus\_file\_truncate} и \textit{hfsplus\_inode\_read\_fork}, которые образуют потенциальное состояние гонки.
 Таким образом, найдено одно из двух исправлений.
+После исправления находится ложное сообщение об ошибке в другом месте из-за неточности анализа.
 
 Для данного модуля потребовалось добавление функций регистрации структур \textit{hfsplus\_btree\_ops} и \textit{hfsplus\_ops}, \textit{hfsplus\_file\_operations} в модель окружения.
 % Вопрос с честной конфигурацией TM без лимитов
@@ -1361,6 +1370,17 @@ CPALockator выдает предупрждение для этого указа
 
 \textbf{Статус:} не найдена.
 
+\vspace{1cm}
+
+\textbf{Коммит:} 8a2629a
+
+Коммит исправлет высокоуровневое состояние гонки.
+При установлении нового соединения функция \textit{isert_connect_request} создавала структуру данных, соответствующую новому соединению, инициализировала ее, потом под мьютексом добавляла в разделяемый список и в конце будила спящий поток \textit{isert_accept_np}, который начинал работать с новым соединением.
+Однако, в случае нескольких созданных запросов после создания одного соединения проснутся сразу несколько потоков \textit{isert_accept_np}.
+Каждый из них проверит список соединений под блокировками, что означает, что только один из них получит соединение, а остальные снова отправяться ждать. 
+После пяти итераций эти потоки начнут завершаться с ошибкой, что приведет к потерям запросов.
+
+\textbf{Статус:} не найдена.
 
 %_____________________
 
