--- a/Dissertation/part_related_work.tex
+++ b/Dissertation/part_related_work.tex
@@ -32,7 +32,7 @@
 Хотя такие методы понемногу развиваются, они до сих пор с большим трудом применяются даже к небольшим пользовательским программам. 
 Например, в упомянутой статье авторы проводили практическое исследование своего метода на искусственных тестах, типа вычисления чисел Фибоначчи.
 
-\section{Методы динамического анализ многопоточных программ}
+\section{Методы динамического анализа многопоточных программ}
 \label{rw:dynamic}
 
 Динамический анализ активно применяется для поиска типовых ошибок, его основное достоинство заключается в низком проценте ложных срабатываний.
@@ -517,6 +517,10 @@ Locksmith реализован на основе библиотеки CIL~\cite{
 Расширение подхода с раздельным рассмотрением потоков и абстракцией было представлено в~\cite{Malkis:2006}, а затем реализовано в инструменте TAR~\cite{TAR}.
 В этом подходе была предложена идея эффектов от потока, которые вычислялись на основе действий потока. Эти эффекты затем применялись к другим потокам.
 Примитивы синхронизации были реализованы, как обыкновенные переменные.
+
+В статье\cite{ShapeTM} представлено применение подхода с раздельным рассмотрением потоков для анализа динамически выделяемой памяти (англ. Shape analysis). 
+В подходе предполагалось итеративное построение инвариантов памяти для доказательства корректной работы с памятью в многопоточной программе.
+Несмотря на интересную идею, применение данного инструмента было возможно на небольших тестовых программах, подготовленных на основе драйверов ОС Windows.
 
 Похожие идеи были представлены в статьях~\cite{Threader:2011,Gupta:2011:POPL,Gupta:2011}, которые представляют инструмент Threader.
 Основная идея метода заключается в поиске некоторого инварианта для программы, из которого следует доказываемое свойство.
