--- a/Dissertation/part_theory.tex
+++ b/Dissertation/part_theory.tex
@@ -1,6 +1,6 @@
 \newcommand{\epp}{\mathrel{\bigoplus}}
 
-\chapter{Теория}
+\chapter{Метод верификации многопоточной программы с раздельным рассмотрением потоков}
 \label{chapter_theory}
 
 \section{Основные определения}
@@ -672,7 +672,7 @@ compose_{I}(e, e'|_p), &\mbox{ если } compatible_I(e, e'|_p) \\
 Таким образом, оператор $apply$ означает, что переходы могут быть объединены, только если они совместны. Результатом применения оператора является новый переход, который будем называть переходом в окружении, так как он представляет собой эффект окружения.
 
 Оператор $apply$ связан с оператором $transfer_I$, поэтому отдельного условия на него нет.
-Тем не менее, в дальнейшем будет описано явное условие~\ref{cpa_transfer_tm_req}, связывающее операторы $apply$ и $transfer_I$.
+Тем не менее, в дальнейшем будет описано явное условие~\ref{cpa_transfer_inner_req}, связывающее операторы $apply$ и $transfer_I$.
 %Требование~\ref{cpa_transfer_tm_req} является более строгим и влечет за собой выполнение~\ref{cpa_transfer_eq}.
 %Таким образом, CPA удовлетворяют общим условиям.
 
