--- a/Synopsis/title.tex
+++ b/Synopsis/title.tex
@@ -35,7 +35,7 @@
 \newpage
 % оборотная сторона обложки
 \thispagestyle{empty}
-\noindent Работа выполнена в {\thesisInOrganization}.
+\noindent Работа выполнена в {институте системного программирования им. В.П. Иванникова Российской академии наук}.
 
 \vspace{0.008\paperheight plus1fill}
 \noindent%
