--- a/biblio/othercites.bib
+++ b/biblio/othercites.bib
@@ -1,3 +1,22 @@
+@article{ShapeTM,
+ author = {Gotsman, Alexey and Berdine, Josh and Cook, Byron and Sagiv, Mooly},
+ title = {Thread-Modular Shape Analysis},
+ year = {2007},
+ issue_date = {June 2007},
+ publisher = {Association for Computing Machinery},
+ address = {New York, NY, USA},
+ volume = {42},
+ number = {6},
+ issn = {0362-1340},
+ url = {https://doi.org/10.1145/1273442.1250765},
+ doi = {10.1145/1273442.1250765},
+ journal = {SIGPLAN Not.},
+ month = {jun},
+ pages = {266–277},
+ numpages = {12},
+ keywords = {static analysis, abstract interpretation, shape analysis, concurrent programming}
+}
+
 @inproceedings{Witness,
  author = {Beyer, Dirk and Dangl, Matthias and Dietsch, Daniel and Heizmann, Matthias and Stahlbauer, Andreas},
  title = {Witness Validation and Stepwise Testification Across Software Verifiers},
@@ -2032,7 +2051,7 @@ annote = {}
 
 @article{CEGAR01,
 	 language="russian",
-	 AUTHOR={M.U. Mandrykin and V.S. Mutilin and A.V. Khoroshilov},
+	 AUTHOR={М.У. Мандрыкин and В.С. Мутилин and А.В. Хорошилов},
 	 TITLE={Введение в метод {CEGAR} -- уточнение абстракции по контрпримерам},
 	 JOURNAL={Труды ИСП РАН},
 	 PAGES="219--292",
@@ -2145,12 +2164,12 @@ volume={8}
 }
 
 @article{commit_analysis_12,
-	 AUTHOR= {V.S. Mutilin and E.M. Novikov and A.V. Khoroshilov},
-	 TITLE={Analysis of typical faults in {L}inux operating system drivers (in {R}ussian)},
-	 JOURNAL={Proceedings of the Institute for System Programming of RAS},
+	 AUTHOR= {В.С. Мутилин and Е.М. Новиков and А.В. Хорошилов},
+	 TITLE={Анализ типовых ошибок в драйверах операционной системы {L}inux},
+	 JOURNAL={Труды ИСП РАН},
 	 PAGES="349-374",
 	 volume={22},
-	 address = {Moscow},
+	 address = {Москва},
 	 YEAR={2012}
 }
 
