--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -16,12 +16,8 @@
 Таким образом, число проблем в проекте размером миллион строк кода исчисляется тысячами.
 Степень критичности ошибки также зависит и от той области, в которой применяется программное обеспечение.
 Ошибки в программных системах, используемых в авиации или на атомных электростанциях, могут привести к значительным человеческим жертвам или колоссальным финансовым затратам.
-Известно множество случаев, в которых ошибки в программном обеспечении приводили к серьезным последствиям, например, случаи с аппаратом лучевой терапии Therac-25 и с космическим аппаратом
-\ifsynopsis
-Phobos.
-\else
-Phobos~\cite{Leveson:1995}.
-\fi
+Известно множество случаев, в которых ошибки в программном обеспечении приводили к серьезным последствиям, например, случаи с аппаратом лучевой терапии Therac-25 и с космическим аппаратом 
+Phobos\citeinsynopsis{Leveson:1995}.
 Таким образом, с момента возникновения первых вычислительных систем перед людьми всегда стояла задача проверки правильности программы. 
 
 %Под верификацией будем понимать проверку соответствия одних создаваемых в ходе разработки и сопровождения программного обеспечения сущностей другим, ранее созданным или используемым в качестве исходных данных, а также соответствие этих сущностей и процессов их разработки правилам и стандартам [4]. В качестве сущностей могут выступать непосредственно программы, модели, документы и др.
@@ -66,17 +62,13 @@ Phobos~\cite{Leveson:1995}.
 В ядре операционной системы может одновременно выполняться большое число (несколько десятков) совершенно различных функций: обработчики прерываний, системные вызовы от пользовательских программ, внутренние службы ядра, например, планировщик, драйвера внешних устройств.
 Для синхронизации всех этих функций используются не только обыкновенные примитивы синхронизации, но и специальные низкоуровневые, которые характерны только для системного программного обеспечения, например, запреты прерываний и планирования. 
 Различные исследования показывают, что ошибки, связанные с параллельным выполнением, в системном программном обеспечении являются достаточно многочисленными, например, к ним относятся около 20\% всех ошибок в файловых
-\ifsynopsis
-системах.
-\else
-системах~\cite{Palix11}.
-\fi
+системах~\citeinsynopsis{Palix11}.
 
 Верификация многопоточных программ всегда являлась более сложной задачей, чем верификация последовательных программ.
 Точное вычисление всех возможных чередований (англ. interleavings), приводит к комбинаторному взрыву числа состояний.
-Поэтому, большинство инструментов статической верификации применяют арзличные техники оптимизации: редукция частичных порядков (англ. partial order reduction)~\cite{Abdulla:2014,Godefroid:1996}, абстракция счетчика (англ. counter abstraction)~\cite{Basler:2009} и другие.
+Поэтому, большинство инструментов статической верификации применяют арзличные техники оптимизации: редукция частичных порядков (англ. partial order reduction)~\citeinsynopsis{Abdulla:2014},\citeinsynopsis{Godefroid:1996}, абстракция счетчика (англ. counter abstraction)~\citeinsynopsis{Basler:2009} и другие.
 Тем не менее, большинство современных инструментов статической верификации плохо масштабируются на промышленное программное обеспечение.
-Этот факт подтверждается соревнованием по статической верификации~\cite{svcomp19}.
+Этот факт подтверждается соревнованием по статической верификации~\citeinsynopsis{svcomp19}.
 Задачи из категории «многопоточность», основанные на драйверах операционной системы Linux вызывают значительные сложности для всех инструментов статической верификации.
 
 Противоположностью методам проверки моделей являются методы статического анализа, которые нацелены на быстрый поиск ошибок без какой-либо уверенности в финальном вердикте.
@@ -92,15 +84,15 @@ Phobos~\cite{Leveson:1995}.
 
 Таким образом, задача поиска ошибок синхронизации в ядрах операционных систем, в том числе, состояний гонки по данным, является важной и актуальной задачей.
 
-\ifsynopsis
-%Этот абзац появляется только в~автореферате.
-\else
-
-%Динамический анализ системного программного обеспечения не обеспечивает должного качества для применения целевого ПО в критически важных областях. В таких случаях необходимо применение формальных методов верификации. Основной сложностью данного подхода является высокая сложность точного моделирования системного программного обеспечения, так как неизбежно возникает проблема комбинаторного взрыва. Тем не менее, сейчас активно применяется формальная верификация для доказательств корректности отдельных подсистем (модулей) программной системы с формулировкой требований на корректное использование его интерфейсов другими частями системы.
-
-Даже при анализе одного потока сложной программной системы возникают сложности с анализом циклов, битовых операций, адресной арифметики. 
-На сколько учитывать окружение и другие потоки?
-\fi
+%\ifsynopsis
+%%Этот абзац появляется только в~автореферате.
+%\else
+%
+%%Динамический анализ системного программного обеспечения не обеспечивает должного качества для применения целевого ПО в критически важных областях. В таких случаях необходимо применение формальных методов верификации. Основной сложностью данного подхода является высокая сложность точного моделирования системного программного обеспечения, так как неизбежно возникает проблема комбинаторного взрыва. Тем не менее, сейчас активно применяется формальная верификация для доказательств корректности отдельных подсистем (модулей) программной системы с формулировкой требований на корректное использование его интерфейсов другими частями системы.
+%
+%Даже при анализе одного потока сложной программной системы возникают сложности с анализом циклов, битовых операций, адресной арифметики. 
+%На сколько учитывать окружение и другие потоки?
+%\fi
 
 % {\progress} 
 % Этот раздел должен быть отдельным структурным элементом по
