--- a/common/data.tex
+++ b/common/data.tex
@@ -29,12 +29,9 @@
 \newcommand{\thesisYear}               % Диссертация, год написания диссертации
 {2020}
 \newcommand{\thesisOrganization}       % Диссертация, организация
-{Институт системного программирования Российской академии наук}
+{Институт системного программирования им. В.П. Иванникова \\ Российской академии наук}
 \newcommand{\thesisOrganizationShort}  % Диссертация, краткое название организации для доклада
 {ИСП РАН}
-
-\newcommand{\thesisInOrganization}     % Диссертация, организация в предложном падеже: Работа выполнена в ...
-{институте системного программирования Российской академии наук}
 
 \newcommand{\supervisorFio}            % Научный руководитель, ФИО
 {Хорошилов Алексей Владимирович}
