--- a/dissertation.tex
+++ b/dissertation.tex
@@ -20,7 +20,10 @@
 \input{Dissertation/userstyles}          % Стили для специфических пользовательских задач
 \input{biblio/bibliopreamble}% Настройки библиографии из внешнего файла (там же выбор: встроенная или на основе biblatex)
 
-\input{Dissertation/inclusioncontrol}    % Управление компиляцией отдельных частей диссертации
+% Необходимо сначала иметь полностью скомпилированный документ, чтобы все промежуточные файлы были в наличии
+% Затем, для вывода отдельных частей можно воспользоваться командой \includeonly
+%
+%\includeonly{Dissertation/contents,Dissertation/appendix,Dissertation/conclusion}
 
 \begin{document}
 
