--- a/Dissertation/title.tex
+++ b/Dissertation/title.tex
@@ -1,29 +1,17 @@
 % Титульный лист (ГОСТ Р 7.0.11-2001, 5.1)
 \thispagestyle{empty}%
 \begin{center}%
-\thesisOrganization
+Федеральное государственное бюджетное учреждение науки
+Институт системного программирования им. В.П. Иванникова \\ Российской академии наук
 \end{center}%
 %
 \vspace{0pt plus4fill} %число перед fill = кратность относительно некоторого расстояния fill, кусками которого заполнены пустые места
-\IfFileExists{images/logo.pdf}{
-  \begin{minipage}[b]{0.499\linewidth}
-    \begin{flushleft}%
-      \includegraphics[height=3.5cm]{logo}
-    \end{flushleft}
-  \end{minipage}
-  \begin{minipage}[b]{0.499\linewidth}
-    \begin{flushright}%
-      На правах рукописи\\
-%      \textsl {УДК \thesisUdk}
-    \end{flushright}%
-  \end{minipage}
-}{
+
 \begin{flushright}%
 На правах рукописи
 
 %\textsl {УДК \thesisUdk}
 \end{flushright}%
-}
 %
 \vspace{0pt plus6fill} %число перед fill = кратность относительно некоторого расстояния fill, кусками которого заполнены пустые места
 \begin{center}%
