--- a/Presentation/presentation.tex
+++ b/Presentation/presentation.tex
@@ -110,7 +110,7 @@
 \frametitle{Одиночное изображение}
 \begin{figure}[H]
   \center
-  \includegraphics[width=0.8\linewidth]{latex}
+  \includegraphics[width=0.8\linewidth]{CPATree}
 \end{figure}
 \end{frame}
 
@@ -132,12 +132,12 @@ $$
 \begin{figure}[h]
   \begin{minipage}[h]{0.49\linewidth}
     \textbf{Составная \\ подпись 1}
-    \center{\includegraphics[width=1\linewidth]{knuth1}}
+    \center{\includegraphics[width=1\linewidth]{ThreadCPAEnv-img}}
   \end{minipage}
   \hfill
   \begin{minipage}[h]{0.49\linewidth}
     \textbf{Составная \\ подпись 2}
-    \center{\includegraphics[width=1\linewidth]{knuth2}}
+    \center{\includegraphics[width=1\linewidth]{ThreadCPAExt-img}}
   \end{minipage}
 \end{figure}
 \end{frame}
@@ -191,10 +191,10 @@ $$
 \frametitle{Четыре изображения}
 \begin{figure}[H]
   \center
-    \includegraphics[width=0.4\linewidth]{latex}
-    \includegraphics[width=0.4\linewidth]{latex}\\
-    \includegraphics[width=0.4\linewidth]{latex}
-    \includegraphics[width=0.4\linewidth]{latex}
+    \includegraphics[width=0.4\linewidth]{MethodScheme}
+    \includegraphics[width=0.4\linewidth]{MethodScheme}\\
+    \includegraphics[width=0.4\linewidth]{MethodScheme}
+    \includegraphics[width=0.4\linewidth]{MethodScheme}
 \end{figure}
 \end{frame}
 
