--- a/common/packages.tex
+++ b/common/packages.tex
@@ -12,6 +12,7 @@
 \fi
 
 \newif\ifsynopsis           % Условие, проверяющее, что документ --- автореферат
+  
 
 \RequirePackage{etoolbox}[2015/08/02]               % Для продвинутой проверки разных условий
 
@@ -120,4 +121,4 @@
 
 %%% Цитата, не приводимая в автореферате:
 % возможно, актуальна только для biblatex
-%\newcommand{\citeinsynopsis}[1]{\ifsynopsis\else ~\cite{#1} \fi}
+\newcommand{\citeinsynopsis}[1]{\ifsynopsis\else ~\cite{#1} \fi}
